--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p class="flex items-center"><span class="text-neon-blue mr-3">📍</span> Indore, India</p>
                     <p class="flex items-center"><span class="text-neon-blue mr-3">🎓</span> B.Tech - CSE (AI & ML) at
                         RGPV</p>
-                    <p class="flex items-center"><span class="text-neon-blue mr-3">💼</span> Frontend Developer & Data
+                    <p class="flex items-center"><span class="text-neon-blue mr-3">💼</span> web Developer & Data
                         Analyst at Equadator</p>
                 </div>
                 <div class="col-span-2 grid grid-cols-1 sm:grid-cols-3 gap-4 mt-6 md:mt-0">
@@ -614,5 +614,6 @@
 
     <script src="main.js"></script>
 </body>
+
 
 </html>
