Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
                 <p>
                     I am currently pursuing my **B.Tech in Computer Science** with a specialization in **AI & Machine
-                    Learning** at **RGPV**. My expertise spans across web development, AI-driven automation, and machine
+                    Learning** at **Acropolis Institute of Technology & Research**. My expertise spans across web development, AI-driven automation, and machine
                     learning applications.
                 </p>
             </div>
@@ -85,7 +85,7 @@
                 <div class="col-span-1 space-y-2 text-gray-200">
                     <p class="flex items-center"><span class="text-neon-blue mr-3">📍</span> Indore, India</p>
                     <p class="flex items-center"><span class="text-neon-blue mr-3">🎓</span> B.Tech - CSE (AI & ML) at
-                        RGPV</p>
+                        Acropolis Institute of Technology & Research</p>
                     <p class="flex items-center"><span class="text-neon-blue mr-3">💼</span> web Developer & Data
                         Analyst at Equadator</p>
                 </div>
@@ -617,3 +617,4 @@
 
 
 </html>
+
