added some links

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                             class="flex items-center px-4 py-2 border-2 border-neon-blue text-neon-blue rounded-lg font-medium hover:bg-neon-blue/10 transition">
                             <span class="mr-2">💡</span>View Code
                         </a>
-                        <a href="https://github.com/siddh-webd-ml/Turbo-voice-assistant"
+                        <a href="https://www.linkedin.com/posts/siddh-agrawal-54214b343_turbo-python-based-voice-assistant-i-activity-7373056708606324736-TOnV?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFX8DUIB94ObY_naeJKi-qOJpc_D-zdOwYg"
                             class="flex items-center px-4 py-2 border-2 border-green-400 text-green-400 rounded-lg font-medium hover:bg-green-400/10 transition">
                             <span class="mr-2">↗</span>Live Demo
                         </a>
@@ -617,4 +617,5 @@
 
 
 </html>
+
 
