Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                 <div class="col-span-2 grid grid-cols-1 sm:grid-cols-3 gap-4 mt-6 md:mt-0">
                     <div class="bg-card-bg p-4 rounded-xl text-center shadow-lg">
                         <span class="text-3xl text-neon-blue block mb-1">&lt;/&gt;</span>
-                        <p class="text-3xl font-bold">2+</p>
+                        <p class="text-3xl font-bold">1+</p>
                         <p class="text-sm text-gray-400">Years Experience</p>
                     </div>
                     <div class="bg-card-bg p-4 rounded-xl text-center shadow-lg">
                         <span class="text-3xl text-neon-blue block mb-1">📂</span>
-                        <p class="text-3xl font-bold">5+</p>
+                        <p class="text-3xl font-bold">2+</p>
                         <p class="text-sm text-gray-400">Projects Completed</p>
                     </div>
                     <div class="bg-card-bg p-4 rounded-xl text-center shadow-lg">
                         <span class="text-3xl text-neon-blue block mb-1">📜</span>
-                        <p class="text-3xl font-bold">10+</p>
+                        <p class="text-3xl font-bold">5+</p>
                         <p class="text-sm text-gray-400">Certifications</p>
                     </div>
                 </div>
@@ -438,15 +438,15 @@
                 <div class="bg-card-bg p-6 rounded-xl shadow-2xl flex relative">
                     <span class="text-4xl text-green-400 mr-4">🏅</span>
                     <div class="flex-grow">
-                        <h3 class="text-xl font-bold text-white mb-1">CSS Skill Certification</h3>
-                        <p class="text-gray-400">HackerRank</p>
+                        <h3 class="text-xl font-bold text-white mb-1">Job simulation certificate</h3>
+                        <p class="text-gray-400">Electronics arts</p>
                         <p class="text-gray-500 text-sm mb-4">2024</p>
                         <span
                             class="inline-block px-3 py-1 text-sm rounded-full font-medium text-white bg-green-600/70">
-                            Skill Verification
+                            Job Simulation
                         </span>
                     </div>
-                    <a href="https://www.hackerrank.com/certificates/c673d78b9c9f" class="absolute top-4 right-4 text-gray-500 hover:text-white transition"><span
+                    <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/j43dGscQHtJJ57N54/a77WE3de8qrxWferQ_j43dGscQHtJJ57N54_7Agywzo7NPmhCbS5W_1752310412084_completion_certificate.pdf" class="absolute top-4 right-4 text-gray-500 hover:text-white transition"><span
                             class="text-xl">↗</span></a>
                 </div>
 
@@ -617,5 +617,6 @@
 
 
 </html>
+
 
 
